This is my final code, with a few changes

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
     height: 40%;
     width: 40%;
     margin: auto;
-    border: dotted red;
+    border: solid white;
     background-color: white;
    margin-top: 5%;
 }
