--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@ body {
     background-color: black;
    
 }
-
+.image {
+    margin: 0;
+    padding: 0;
+}
 #picture1 {
     width: 100%;
     height: 50%;
@@ -19,7 +22,7 @@ body {
 }
 
 #headtext {
-    margin: -15px 280px 0 0 ;
+    margin: -15px 260px 0 0 ;
     padding: 0px;
     line-height: 0.3;
 
@@ -34,29 +37,32 @@ body {
     
 }
 
-.left {
-    height: 50px;
-    width: 50px;
-    float: left;
-    padding-right: 10px;
+.icons {
+    display: flex;
 }
 
-#right {
-    height: 50px;
-    width: 50px;
-    float: right;
-    padding-right: 30px;
+.icons img{
+    width: 30px;
+    height: 30px;
+}
+
+.icons img:nth-last-child(1){
+    margin-left: 310px;
 }
 
 #outline {
     height: 700px;
     width: 450px;
     margin: auto;
-    border: solid white;
     background-color: white;
-   margin-top: 5%;
+    margin-top: 5%;
+    padding: 0;
 }
 .fitbetter {
     display: flex;
-    padding-top: 10px;
+    padding: 10px;
+}
+
+.body {
+    padding: 10px
 }
